fix shrinking model-viewers on mobile

--- a/style/app.css
+++ b/style/app.css
@@ -56,9 +56,6 @@ h1{
     height: 150vh;
     grid-template-columns: auto auto;
   }
-  .container model-viewer{
-    height: 80%;
-  }
 }
 
 @media only screen and (max-width: 500px) {
@@ -66,8 +63,5 @@ h1{
     grid-template-columns: auto;
     height: 300vh;
     padding: 1rem;
-  }
-  .container model-viewer{
-    height: 80%;
   }
 }
